src/Bluetooth/Raw/HciLib.hs


{-# LINE 67 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_write_class_of_dev" c'hci_write_class_of_dev
  :: CInt -> CUInt -> CInt -> IO CInt
foreign import ccall "&hci_write_class_of_dev" p'hci_write_class_of_dev
  :: FunPtr (CInt -> CUInt -> CInt -> IO CInt)

{-# LINE 68 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_voice_setting" c'hci_read_voice_setting
  :: CInt -> Ptr CUShort -> CInt -> IO CInt
foreign import ccall "&hci_read_voice_setting" p'hci_read_voice_setting
  :: FunPtr (CInt -> Ptr CUShort -> CInt -> IO CInt)

{-# LINE 69 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_write_voice_setting" c'hci_write_voice_setting
  :: CInt -> CUShort -> CInt -> IO CInt
foreign import ccall "&hci_write_voice_setting" p'hci_write_voice_setting
  :: FunPtr (CInt -> CUShort -> CInt -> IO CInt)

{-# LINE 70 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_current_iac_lap" c'hci_read_current_iac_lap
  :: CInt -> Ptr CUChar -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_read_current_iac_lap" p'hci_read_current_iac_lap
  :: FunPtr (CInt -> Ptr CUChar -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 71 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_write_current_iac_lap" c'hci_write_current_iac_lap
  :: CInt -> CUChar -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_write_current_iac_lap" p'hci_write_current_iac_lap
  :: FunPtr (CInt -> CUChar -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 72 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_stored_link_key" c'hci_read_stored_link_key
  :: CInt -> Ptr C'bdaddr_t -> CUChar -> CInt -> IO CInt
foreign import ccall "&hci_read_stored_link_key" p'hci_read_stored_link_key
  :: FunPtr (CInt -> Ptr C'bdaddr_t -> CUChar -> CInt -> IO CInt)

{-# LINE 73 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_write_stored_link_key" c'hci_write_stored_link_key
  :: CInt -> Ptr C'bdaddr_t -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_write_stored_link_key" p'hci_write_stored_link_key
  :: FunPtr (CInt -> Ptr C'bdaddr_t -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 74 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_delete_stored_link_key" c'hci_delete_stored_link_key
  :: CInt -> Ptr C'bdaddr_t -> CUChar -> CInt -> IO CInt
foreign import ccall "&hci_delete_stored_link_key" p'hci_delete_stored_link_key
  :: FunPtr (CInt -> Ptr C'bdaddr_t -> CUChar -> CInt -> IO CInt)

{-# LINE 75 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_authenticate_link" c'hci_authenticate_link
  :: CInt -> CUShort -> CInt -> IO CInt
foreign import ccall "&hci_authenticate_link" p'hci_authenticate_link
  :: FunPtr (CInt -> CUShort -> CInt -> IO CInt)

{-# LINE 76 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_encrypt_link" c'hci_encrypt_link
  :: CInt -> CUShort -> CUChar -> CInt -> IO CInt
foreign import ccall "&hci_encrypt_link" p'hci_encrypt_link
  :: FunPtr (CInt -> CUShort -> CUChar -> CInt -> IO CInt)

{-# LINE 77 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_change_link_key" c'hci_change_link_key
  :: CInt -> CUShort -> CInt -> IO CInt
foreign import ccall "&hci_change_link_key" p'hci_change_link_key
  :: FunPtr (CInt -> CUShort -> CInt -> IO CInt)

{-# LINE 78 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_switch_role" c'hci_switch_role
  :: CInt -> Ptr C'bdaddr_t -> CUChar -> CInt -> IO CInt
foreign import ccall "&hci_switch_role" p'hci_switch_role
  :: FunPtr (CInt -> Ptr C'bdaddr_t -> CUChar -> CInt -> IO CInt)

{-# LINE 79 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_park_mode" c'hci_park_mode
  :: CInt -> CUShort -> CUShort -> CUShort -> CInt -> IO CInt
foreign import ccall "&hci_park_mode" p'hci_park_mode
  :: FunPtr (CInt -> CUShort -> CUShort -> CUShort -> CInt -> IO CInt)

{-# LINE 80 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_exit_park_mode" c'hci_exit_park_mode
  :: CInt -> CUShort -> CInt -> IO CInt
foreign import ccall "&hci_exit_park_mode" p'hci_exit_park_mode
  :: FunPtr (CInt -> CUShort -> CInt -> IO CInt)

{-# LINE 81 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_inquiry_scan_type" c'hci_read_inquiry_scan_type
  :: CInt -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_read_inquiry_scan_type" p'hci_read_inquiry_scan_type
  :: FunPtr (CInt -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 82 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_write_inquiry_scan_type" c'hci_write_inquiry_scan_type
  :: CInt -> CUChar -> CInt -> IO CInt
foreign import ccall "&hci_write_inquiry_scan_type" p'hci_write_inquiry_scan_type
  :: FunPtr (CInt -> CUChar -> CInt -> IO CInt)

{-# LINE 83 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_inquiry_mode" c'hci_read_inquiry_mode
  :: CInt -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_read_inquiry_mode" p'hci_read_inquiry_mode
  :: FunPtr (CInt -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 84 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_write_inquiry_mode" c'hci_write_inquiry_mode
  :: CInt -> CUChar -> CInt -> IO CInt
foreign import ccall "&hci_write_inquiry_mode" p'hci_write_inquiry_mode
  :: FunPtr (CInt -> CUChar -> CInt -> IO CInt)

{-# LINE 85 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_afh_mode" c'hci_read_afh_mode
  :: CInt -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_read_afh_mode" p'hci_read_afh_mode
  :: FunPtr (CInt -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 86 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_write_afh_mode" c'hci_write_afh_mode
  :: CInt -> CUChar -> CInt -> IO CInt
foreign import ccall "&hci_write_afh_mode" p'hci_write_afh_mode
  :: FunPtr (CInt -> CUChar -> CInt -> IO CInt)

{-# LINE 87 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_ext_inquiry_response" c'hci_read_ext_inquiry_response
  :: CInt -> Ptr CUChar -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_read_ext_inquiry_response" p'hci_read_ext_inquiry_response
  :: FunPtr (CInt -> Ptr CUChar -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 88 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_write_ext_inquiry_response" c'hci_write_ext_inquiry_response
  :: CInt -> CUChar -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_write_ext_inquiry_response" p'hci_write_ext_inquiry_response
  :: FunPtr (CInt -> CUChar -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 89 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_simple_pairing_mode" c'hci_read_simple_pairing_mode
  :: CInt -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_read_simple_pairing_mode" p'hci_read_simple_pairing_mode
  :: FunPtr (CInt -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 90 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_write_simple_pairing_mode" c'hci_write_simple_pairing_mode
  :: CInt -> CUChar -> CInt -> IO CInt
foreign import ccall "&hci_write_simple_pairing_mode" p'hci_write_simple_pairing_mode
  :: FunPtr (CInt -> CUChar -> CInt -> IO CInt)

{-# LINE 91 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_local_oob_data" c'hci_read_local_oob_data
  :: CInt -> Ptr CUChar -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_read_local_oob_data" p'hci_read_local_oob_data
  :: FunPtr (CInt -> Ptr CUChar -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 92 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_inq_response_tx_power_level" c'hci_read_inq_response_tx_power_level
  :: CInt -> Ptr CSChar -> CInt -> IO CInt
foreign import ccall "&hci_read_inq_response_tx_power_level" p'hci_read_inq_response_tx_power_level
  :: FunPtr (CInt -> Ptr CSChar -> CInt -> IO CInt)

{-# LINE 93 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_inquiry_transmit_power_level" c'hci_read_inquiry_transmit_power_level
  :: CInt -> Ptr CSChar -> CInt -> IO CInt
foreign import ccall "&hci_read_inquiry_transmit_power_level" p'hci_read_inquiry_transmit_power_level
  :: FunPtr (CInt -> Ptr CSChar -> CInt -> IO CInt)

{-# LINE 94 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_write_inquiry_transmit_power_level" c'hci_write_inquiry_transmit_power_level
  :: CInt -> CSChar -> CInt -> IO CInt
foreign import ccall "&hci_write_inquiry_transmit_power_level" p'hci_write_inquiry_transmit_power_level
  :: FunPtr (CInt -> CSChar -> CInt -> IO CInt)

{-# LINE 95 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_transmit_power_level" c'hci_read_transmit_power_level
  :: CInt -> CUShort -> CUChar -> Ptr CSChar -> CInt -> IO CInt
foreign import ccall "&hci_read_transmit_power_level" p'hci_read_transmit_power_level
  :: FunPtr (CInt -> CUShort -> CUChar -> Ptr CSChar -> CInt -> IO CInt)

{-# LINE 96 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_link_policy" c'hci_read_link_policy
  :: CInt -> CUShort -> Ptr CUShort -> CInt -> IO CInt
foreign import ccall "&hci_read_link_policy" p'hci_read_link_policy
  :: FunPtr (CInt -> CUShort -> Ptr CUShort -> CInt -> IO CInt)

{-# LINE 97 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_write_link_policy" c'hci_write_link_policy
  :: CInt -> CUShort -> CUShort -> CInt -> IO CInt
foreign import ccall "&hci_write_link_policy" p'hci_write_link_policy
  :: FunPtr (CInt -> CUShort -> CUShort -> CInt -> IO CInt)

{-# LINE 98 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_link_supervision_timeout" c'hci_read_link_supervision_timeout
  :: CInt -> CUShort -> Ptr CUShort -> CInt -> IO CInt
foreign import ccall "&hci_read_link_supervision_timeout" p'hci_read_link_supervision_timeout
  :: FunPtr (CInt -> CUShort -> Ptr CUShort -> CInt -> IO CInt)

{-# LINE 99 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_write_link_supervision_timeout" c'hci_write_link_supervision_timeout
  :: CInt -> CUShort -> CUShort -> CInt -> IO CInt
foreign import ccall "&hci_write_link_supervision_timeout" p'hci_write_link_supervision_timeout
  :: FunPtr (CInt -> CUShort -> CUShort -> CInt -> IO CInt)

{-# LINE 100 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_set_afh_classification" c'hci_set_afh_classification
  :: CInt -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_set_afh_classification" p'hci_set_afh_classification
  :: FunPtr (CInt -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 101 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_link_quality" c'hci_read_link_quality
  :: CInt -> CUShort -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_read_link_quality" p'hci_read_link_quality
  :: FunPtr (CInt -> CUShort -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 102 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_rssi" c'hci_read_rssi
  :: CInt -> CUShort -> Ptr CSChar -> CInt -> IO CInt
foreign import ccall "&hci_read_rssi" p'hci_read_rssi
  :: FunPtr (CInt -> CUShort -> Ptr CSChar -> CInt -> IO CInt)

{-# LINE 103 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_afh_map" c'hci_read_afh_map
  :: CInt -> CUShort -> Ptr CUChar -> Ptr CUChar -> CInt -> IO CInt
foreign import ccall "&hci_read_afh_map" p'hci_read_afh_map
  :: FunPtr (CInt -> CUShort -> Ptr CUChar -> Ptr CUChar -> CInt -> IO CInt)

{-# LINE 104 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_read_clock" c'hci_read_clock
  :: CInt -> CUShort -> CUChar -> Ptr CUInt -> Ptr CUShort -> CInt -> IO CInt
foreign import ccall "&hci_read_clock" p'hci_read_clock
  :: FunPtr (CInt -> CUShort -> CUChar -> Ptr CUInt -> Ptr CUShort -> CInt -> IO CInt)

{-# LINE 105 "src/Bluetooth/Raw/HciLib.hsc" #-}
foreign import ccall "hci_le_set_scan_enable" c'hci_le_set_scan_enable
  :: CInt -> CUChar -> CUChar -> CInt -> IO CInt
foreign import ccall "&hci_le_set_scan_enable" p'hci_le_set_scan_enable
  :: FunPtr (CInt -> CUChar -> CUChar -> CInt -> IO CInt)
